--- a/src/lib/@themes/lynx/postcss/_basics.postcss
+++ b/src/lib/@themes/lynx/postcss/_basics.postcss
@@ -90,7 +90,7 @@ h5,
 	font-size: 20px;
 	font-size: 18rem; // scss-lint:disable DuplicateProperty
 	font-weight: $bold;
-	line-height: lh(18, 24);
+	line-height: 1.3;
 }
 h6,
 .h6 {
@@ -100,7 +100,7 @@ h6,
 	font-size: 12px;
 	font-size: 12rem; // scss-lint:disable DuplicateProperty
 	font-weight: $bold;
-	line-height: lh(12, 12);
+	line-height: 1;
 	text-transform: uppercase;
 	letter-spacing: 1.5rem;
 }
