--- a/src/lib/@themes/lynx/postcss/_layout.postcss
+++ b/src/lib/@themes/lynx/postcss/_layout.postcss
@@ -19,6 +19,11 @@ body {
 	font: 15rem/1.15 $font;
 	letter-spacing: 0.02em;
 }
+#svelte {
+	display: flex;
+	width: 100%;
+	min-height: 100%;
+}
 .layout-outer {
 	width: 100%;
 	max-width: $layout-width;
